// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. macros 1`] = `
"
import cssta from '../dev.macro'

cssta('div')\`
  color: red;
\`

cssta('div')\`
  color: blue;
\`

      ↓ ↓ ↓ ↓ ↓ ↓

import __devcssta_web__ from 'cssta';


__devcssta_web__('div')\`
  color: red;
\`;

__devcssta_web__('div')\`
  color: blue;
\`;
"
`;

exports[`1. macros 2`] = `
"
import cssta from '../prod.macro'

cssta('div')\`
  color: red;
\`

cssta('div')\`
  color: blue;
\`

      ↓ ↓ ↓ ↓ ↓ ↓

import _createComponent from 'cssta/lib/web/createComponent';


_createComponent('div', null, {
  'defaultClassName': 'A',
  'classNameMap': {}
});

_createComponent('div', null, {
  'defaultClassName': 'B',
  'classNameMap': {}
});
"
`;
